tests/snapshots/run_wpt_conformance__onnx_quantized_element-wise_binary_sub.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "qdq_subgraph.https.any.js",
    "quantized element-wise binary sub",
    "onnx",
    "PASS",
)
